--- a/source/_posts/笔记.md
+++ b/source/_posts/笔记.md
@@ -2,6 +2,13 @@
 title: 笔记
 date: 2018-12-24 14:58:31
 tags:
+- hexo
+- github
+- 域名
+categories:
+- 笔记
+- 教程
+cover_picture: /images/blog.ico
 ---
 hexo + github 搭建个人博客
 # node环境配置
@@ -65,6 +72,18 @@ hexo clean
 git pull 将本地与服务器同步
 git push 将服务器与本地同步
 
+# 域名绑定
+## 域名解析
+
+记录类型|主机记录|记录值
+-|-|-|
+CNAME|@|用户名.github.io
+A|@|192.30.252.153
+A|@|192.30.252.154
+
+## 创建CNAME
+在blog/source路径下新建一个叫CNAME的文件（不带后缀）
+在文件内填写自己的域名，如：baidu.com
 
 
 上推blog
