--- a/source/_posts/笔记.md
+++ b/source/_posts/笔记.md
@@ -85,6 +85,13 @@ A|@|192.30.252.154
 在blog/source路径下新建一个叫CNAME的文件（不带后缀）
 在文件内填写自己的域名，如：baidu.com
 
+回家以后干：
+强制将本地代码更新到与github同步
+git fetch --all
+git reset --hard origin/master
+git pull
+
+
 
 上推blog
 hexo g 编译
